Revisão dos fatos estilizados

--- a/Articles/VECM/Petrini_VECM_2021.tex
+++ b/Articles/VECM/Petrini_VECM_2021.tex
@@ -1,4 +1,4 @@
-% Created 2021-02-04 qui 09:29
+% Created 2021-02-08 seg 18:14
 % Intended LaTeX compiler: pdflatex
 \documentclass[12pt, a4paper]{article}
 \usepackage[utf8]{inputenc}
@@ -63,7 +63,7 @@ while the other way round does not occur.
 
 
 \section{Introduction}
-\label{sec:org3eae003}
+\label{sec:org568fb00}
 \label{sec:Introduction}
 Among aggregate demand expenditures, non-residential investment is the most examined  one between (at least) heterodox macroeconomists.
 As a consequence, the relevance of others (autonomous) expenditures on macroeconomic dynamics has been underestimated \cite{brochier_macroeconomics_2017}.
@@ -81,98 +81,83 @@ The results for all statistical tests are provided in Appendix \ref{appen:A}.
 
 
 \section{Housing Dynamics and Business Cycle in the US Economy}
-\label{sec:org1f15ed0}
+\label{sec:orgfad3e21}
 \label{sec:Stylized_Facts}
-After the Great Recession, the literature has analyzed the relevance of housing at macroeconomic level \cites{leamer_housing_2015}{teixeira_crescimento_2015}{fiebiger_semi-autonomous_2018}.
-Despite some authors had highlighted the empirical importance of this expenditure in determining economic cycles since the post-war period \cites{grebler_capital_1956}{green_follow_1997}{leamer_housing_2007}, only a few macroeconomists have given due attention to this regularity.
-\textcite{duesenberry_investment_1958} was an exception and reported the relevance of residential investment and real estate inflation in
-determining the economic cycle long before the Great Recession.
-\textcite{keynes_collected_1978} is another example and --- despite dedicating himself to the firms' investment --- wrote to President Roosevelt about the relevance of real estate for economic recovery in the context of the Great Depression:
+Traditionally, economists do not pay attention to the role of residential investment to macroeconomic dynamics.
+There are, nevertheless, two notable exceptions.
+In a letter to President Roosevelt, in the mid of the Great Depression, Keynes present the case of housing as the best aid to fight the crisis and to foster economic recovery \cite[p.~436]{keynes_collected_1978}.
+The other exception is \textcite{duesenberry_investment_1958} who presents a critique of ordinary theories of aggregate investment because they put together firms’ investment in capital and structures and investment in residential housing.
+In this sense, he builds a model dedicated for the latter type of investment, emphasizing the role of house prices.
 
-\begin{quote}
-    ``[\ldots{}] Housing is by far the best aid to recovery because of the large and continuing scale
-of potential demand; because of the wide geographical distribution of this demand; and
-because the sources of its finance are largely independent of the stock exchanges. I should
-advise putting most of your eggs in this basket, caring about this more than about anything,
-and making absolutely sure that they are being hatched without delay. In this country we
-partly depended for many years on direct subsidies. There are few more proper objects for
-such than working-class houses. If a direct subsidy is required to get a move on (we gave
-our subsidies through the local authorities), it should be given without delay or hesitation.''
-\cite[p.~436]{keynes_collected_1978}
-\end{quote}
+Perhaps, this lack of attention could be attributed to residential investment small share of aggregate demand (see figure \ref{fig:share}).
+The subprime crisis and the Great Recession of the US economy had changed the landscape, making clear the macroeconomic role of
+housing prices and finance, and residential investment.
+Specifically, we argue however small its share on GDP is, it does have a fundamental role in explaining business cycles and long-run growth.
 
-As the above excerpt suggests, the relevance of housing is not restricted to the Great Recession nor the USA case.
-Moreover, however small its share on GDP is (see Figure \ref{fig:vol_share} A), it does not imply that it has negligible effects on the business cycle or low volatility (see Figure \ref{fig:vol_share} B).
 
 \begin{figure}[H]
     \centering
-	\caption{Housing's Particular Stylized Facts}
-	\label{fig:vol_share}
+	\caption{Expenditures share on GDP}
+	\label{fig:share}
 \begin{figure}[htb]
-    \includegraphics[width = \textwidth]{./figs/Volatility_share.png}
+    \includegraphics[width = \textwidth]{./figs/Share_AD.png}
     \end{figure}
 	\caption*{\textbf{Source:} U.S. Bureau of Economic Analysis, Authors' Elaboration}
 \end{figure}
 
+An aspect that macroeconomists are paying attention is the role of residential investment to business cycles.
+Even before the Great Recession, \textcite{green_follow_1997} analyses the relation between residential investment, non-residential investment and GDP for the US from 1952 to 1992.
+His conclusion is that residential investment leads the cycle, while non-residential investment (i.e., firms business investment) lags the cycle.
+However he argues it does not imply a causal relationship.
+He restricts its relevance as temporal precedence indicator.
+This result would be due to forward-looking behavior of households.
+
+\textcite{leamer_housing_2007} is more incisive. He states that housing is the business cycle.
+In analyzing the US economy for the post-war period, he concludes that residential investment is the best predictor of economic crises.
+The economic cycle of US economy would be a consumer cycle: ``first homes, then cars, last business investment'' \cite[p.~8]{leamer_housing_2007}.
+\textcite{kydland_2016_housing} extends \citeauthor*{leamer_housing_2007}'s \citeyear{leamer_housing_2007} proposition to other countries to evaluate how unique the US case is.
+Based on a neoclassical business cycle framework, they conclude that long-term nominal mortgage rate is a relevant transmission channel from interest rates to housing costs.
+More recently, \textcite{huang_is_2018} assess both \citeauthor*{leamer_housing_2007}'s \citeyear{leamer_housing_2007} hypotheses related to residential investment (prediction and causality) for 17 countries.
+For the US, both statements are valid\footnote{For the other countries, they found inconclusive results regarding fluctuations due to institutional heterogeneity. However, \textcite{huang_is_2018} claim that for most G7 countries, residential investment at least amplify the business cycle.} and housing related variables (house prices, real mortgage rate --- deflated by a consumer price index --- and bank spread) lead the business cycle.
 
 
-In order to depict the relation between housing and business cycle, we present Figure \ref{FigIh_u}  in which each cycle is represented in a different panel\footnote{This similar reasoning can be found in \textcites{fiebiger_trend_2017}. Unlike them, we plot only residential investment without including other households expenses financed by credit.}. 
-The vertical axis represents residential investment-GDP ratio and the horizontal
-axis represents the rate of capacity utilization as a proxy for business cycle.
-Economic recovery is generally characterized residential investment growing faster than GDP --- with the 1991-2000 period being a particular case. 
-As a consequence of this higher growth rate, is the increase of both residential investment share on GDP and capacity utilization. 
-Following the Sraffian supermultiplier growth model, we conclude that increase of non-residential investment is the result of capital stock adjustment principle.
-This increase implies GDP to grow faster than residential investment, therefore reducing both its share on GDP and capacity utilization ratio. 
-Finally, as a result of economic burst, capacity utilization ratio falls and the cycle.
+In order to depict the relation between residential investment and business cycle, we present Figure \ref{fig:cycle}.
+In each panel, we present the growth rate of selected expenditures 2 years before and after recession begin\footnote{This similar reasoning can be found in \textcite{leamer_housing_2007}.}.
+In most of them, residential investment growth rate is negative before the recession start.
+The Great Recession presents is a remarkable example of this pattern while dot-com crisis is an exception.
+
 
 \begin{figure}[H]
 	\centering
-	\caption{Residential investment share on GDP VS. capacity utilization during recessions}
-	\label{FigIh_u}
-	\includegraphics[width=\textwidth]{./figs/Ciclo_Ih_u.png}
+	\caption{Selected expecditure growth rates 2 years before and after recession start}
+	\label{fig:cycle}
+	\includegraphics[width=\textwidth]{./figs/Centered_Begin_pct1.png}
 	\caption*{\textbf{Source:} Authors' Elaboration}
 \end{figure}
 
-We also report an indirect relation between housing and aggregate demand. 
-Real estate constitutes a significant portion of household wealth so houses serves as collateral to borrowing \cite{teixeira_uma_2011}. 
-As a consequence of US institutional arrangement, households --- especially the poorest ones --- could increase their indebtedness as houses prices went up (see Figure \ref{FigDividaPreco}) as a way to ``make'' capital gains without 
-selling their homes during house bubble of the 2000s \cite{teixeira_crescimento_2015}.
-Therefore, real estate inflation and durable goods consumption are connected and has relevant consequences for business cycle.
-\textcites{zezza_u.s._2008}{barba_rising_2009}, for example, report that credit-financed consumption was one of the main drivers of economic growth before the Great Recession.
-
-
-In this paper, we argue that this relation between households indebtedness and real estate inflation has other relevant implications.
-The first one is the increasing gap between assets and liabilities in the course of the Great Recession.
-This dynamic is due both to the housing prices burst (post-2005) and to the insensitivity of households' financial commitments.
-In other words, real estate (assets) has a market value while debt (liabilities) has a contractual one, thus, households net worth decreases onset of the subprime crisis.
-Therefore, the second implication is the sharp reduction in the net worth of the poorest households in absolute and relative terms (see Figure \ref{FigDistPassivos}).
+In a heterodox perspective, \textcites{fiebiger_semi-autonomous_2018}{fiebiger_trend_2017} present residential investment as a Luxemburg-type of external market providing a source of autonomous demand to absorb economic surplus.
+Both works state its role (together with debt-financed consumption) in inducing non-residential investment and driving output growth, during the business cycle as well in the long-run.
+Figure \ref{fig:trend} presents the trend of GDP and residential investment growth rate by estimating a HP filter.
+In summary, both series share a correlation relation in which residential investment growth rate is more volatile than GDP growth rate.
+Recently, \textcite{perez_Montiel_2021} test econometrically the assertion that this kind of expenditure leads not only the businesses cycle but also the long-run economic growth for the US economy. Their research finds evidence of this claim, without finding any relevant feedback from output to residential investment.
 
 \begin{figure}[H]
 	\centering
-	\caption{Household indebtedness and house prices dynamics (jan/2000=100)}
-	\label{FigDividaPreco}
-	\includegraphics[width=\textwidth]{./figs/Divida_PrecoImoveis.png}
-	\caption*{\textbf{Source:} U.S. Bureau of Economic Analysis, Authors' Elaboration}
+	\caption{GDP and Residential investment growth rate tred (HP filter, $\lambda = 1600$)}
+	\label{fig:trend}
+	\includegraphics[width=\textwidth]{./figs/Trend.png}
+	\caption*{\textbf{Source:} Authors' Elaboration}
 \end{figure}
-
-\begin{figure}[H]
-	\centering
-	\caption{Liabilities evolution by wealth percentile (1989/07=1)}
-	\label{FigDistPassivos}
-	\includegraphics[width=.8\textwidth]{./figs/Distribuicao_Passivos.png}
-	\caption*{\textbf{Source:} \textcite{us_census_bureau_characteristics_2017}, Authors' Elaboration}
-\end{figure}
-
 
 
 Before we move forward, it is worth mentioning that the relevance of housing is not restricted to its growth effects. 
 For example, \textcite{jorda_great_2016} report that credit and financial sector growth has been led mainly by mortgages. 
 As a consequence, banking activities were redirected towards granting credit majorly to households and not towards productive investment \cites{erturk_banks_2007}{kohl_more_2018}.
 Other studies have shown that real estate inflation is the main determinant of household indebtedness, distribution of wealth and that it has implications for macroeconomic stability \cites{ryoo_household_2015}{stockhammer_debt-driven_2016}{barnes_private_2016}{johnston_global_2017}{mian_household_2017}{anderson_politics_2020}{fuller_housing_2020}. 
-In summary, what we intended to show is that one cannot analyze the US business cycle without considering housing dynamics.
-On the following section, we analyze how econometric literature has dealt with this topic.
+In summary, what we intended to show was the macroeconomic relevance of residential investment.
+On the following section, we analyze how econometric literature has dealt with determinants of the latter.
 \section{Review of the Macroeconometric Literature}
-\label{sec:org765c1a6}
+\label{sec:org1faf93b}
 \label{sec:empirical_review}
 After the US housing bubble burst, there have been a growing attention in the macroeconomic implications of residential investment.
 It worth noting that most econometric papers that includes residential investment has failed to treat it macroeconomically, restricting it to microeconomic and regional issues \cite{arestis_u.s._2008}.
@@ -269,10 +254,10 @@ On the following section, we discuss this proposal in further details and evalua
 \input{tabs/EmpiricalMotivation}
 
 \section{Macroeconometric analysis}
-\label{sec:org94dd6a8}
+\label{sec:org3b3bf70}
 \label{sec:VECM}
 \subsection{Houses' own interest rate and residential investment growth rate in the US	Economy}
-\label{sec:orgdd67715}
+\label{sec:org3ee9eba}
 \label{sc:own}
 
 In this subsection, we describe the relationship between residential investment growth rate (\(g_{I_h}\)) and houses' own interest rate (\(own\)) as proposed by \textcite{teixeira_crescimento_2015}. 
@@ -317,7 +302,7 @@ According to \textcite{teixeira_crescimento_2015}, the expected results are depi
 \input{./tabs/hypothesis.tex}
 
 \subsection{Data and estimation strategy}
-\label{sec:org36a947e}
+\label{sec:orge161063}
 \label{sec:estimation}
 
 
@@ -397,7 +382,7 @@ On the following subsection, we analyze the results and compare with the theoret
 
 
 \subsection{Estimation results}
-\label{sec:orgce66780}
+\label{sec:orgc135f84}
 \label{sec:results}
 
 According to parameters presented in Table \ref{Estimacao}, we find statistically significant co-integration  coefficients for both equations. 
@@ -461,7 +446,7 @@ However, they report insignificant coefficients for mortgages nominal interest r
 On the following section we present some concluding remarks.
 
 \section{Concluding Remarks}
-\label{sec:org2aaf3c5}
+\label{sec:org9cad2de}
 \label{sec:Conclusion}
 In this article, we present a residential investment growth rate specification compatible with the Srrafian supermultiplier model.
 To do so, we estimate a bi-dimension VEC evaluate \textcite{teixeira_crescimento_2015}
@@ -488,22 +473,22 @@ Thus, our  proposal differs from the usual empirical literature by:
 
 
 \section*{Acknowledgments}
-\label{sec:org5775a01}
+\label{sec:orgbb5221b}
 \noindent The authors wish to acknowledge the financial support from the Brazilian National Research Council (CNPq; grant 130777/2018-8). We are grateful to Rosângela Ballini, Carolina Baltar, Júlia Braga, Ítalo Pedrosa, Cecon/Unicamp and UFRJ Macroeconomic discussion groups for useful comments and suggestions on earlier drafts of this article. All remaining errors are, of course, our own.
 
 
 \section*{Disclosure statement}
-\label{sec:orgba49892}
+\label{sec:org31e04e1}
 No potential conflict of interest was reported by the authors.
 
 \section*{References}
-\label{sec:org8aefdd7}
+\label{sec:org75ac926}
 \printbibliography[heading=none]
 
 
 \appendix
 \section{Statistical Appendix}
-\label{sec:org11c3252}
+\label{sec:org34a31d0}
 \label{appen:A}
 
 In this appendix we report several tests: unit root tests on our variables of interest, Structural break test, Johansen procedure and hypothesis tests on residuals. 
