--- a/Articles/VECM/Stylized_Facts.org
+++ b/Articles/VECM/Stylized_Facts.org
@@ -1,3 +1,58 @@
+* Residuals :noexport:
+
+To do so, they estimate a Structural Vector Autoregressive (SVEC) model with wavelets transformation for the US and G7 countries.
+They find residential investment is not only a monetary policy transmission channel, but it also has temporally distinct effects on business cycle.
+In the short-run, housing is more predictive while house prices have a bigger influence in the long-run[fn::
+	More precisely, textcite:huang_is_2018 also conclude that residential investment prediction increases with its share on GDP.
+	].
+These distinct temporal influence of housing occurs due to the large wealth effect in the long-run while credit and collateral effects are more relevant in the short-run.
+#+begin_quote
+    ``[...] Housing is by far the best aid to recovery because of the large and continuing scale
+of potential demand; because of the wide geographical distribution of this demand; and
+because the sources of its finance are largely independent of the stock exchanges. I should
+advise putting most of your eggs in this basket, caring about this more than about anything,
+and making absolutely sure that they are being hatched without delay. In this country we
+partly depended for many years on direct subsidies. There are few more proper objects for
+such than working-class houses. If a direct subsidy is required to get a move on (we gave
+our subsidies through the local authorities), it should be given without delay or hesitation.''
+\cite[p.~436]{keynes_collected_1978}
+#+end_quote
+
+As the above excerpt suggests, the relevance of housing is not restricted to the Great Recession nor the USA case.
+
+We also report an indirect relation between housing and aggregate demand.
+Real estate constitutes a significant portion of household wealth so houses serves as collateral to borrowing cite:teixeira_uma_2011.
+As a consequence of US institutional arrangement, households --- especially the poorest ones --- could increase their indebtedness as houses prices went up (see Figure ref:FigDividaPreco) as a way to ``make'' capital gains without
+selling their homes during house bubble of the 2000s cite:teixeira_crescimento_2015.
+Therefore, real estate inflation and durable goods consumption are connected and has relevant consequences for business cycle.
+textcites:zezza_u.s._2008,barba_rising_2009, for example, report that credit-financed consumption was one of the main drivers of economic growth before the Great Recession.
+
+
+In this paper, we argue that this relation between households indebtedness and real estate inflation has other relevant implications.
+The first one is the increasing gap between assets and liabilities in the course of the Great Recession.
+This dynamic is due both to the housing prices burst (post-2005) and to the insensitivity of households' financial commitments.
+In other words, real estate (assets) has a market value while debt (liabilities) has a contractual one, thus, households net worth decreases onset of the subprime crisis.
+Therefore, the second implication is the sharp reduction in the net worth of the poorest households in absolute and relative terms (see Figure ref:FigDistPassivos).
+
+#+begin_export latex
+\begin{figure}[H]
+	\centering
+	\caption{Household indebtedness and house prices dynamics (jan/2000=100)}
+	\label{FigDividaPreco}
+	\includegraphics[width=\textwidth]{./figs/Divida_PrecoImoveis.png}
+	\caption*{\textbf{Source:} U.S. Bureau of Economic Analysis, Authors' Elaboration}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\caption{Liabilities evolution by wealth percentile (1989/07=1)}
+	\label{FigDistPassivos}
+	\includegraphics[width=.8\textwidth]{./figs/Distribuicao_Passivos.png}
+	\caption*{\textbf{Source:} \textcite{us_census_bureau_characteristics_2017}, Authors' Elaboration}
+\end{figure}
+#+end_export
+
+
 * Configs :noexport:
 bibliography:ref.bib
 #+PROPERTY: header-args:python :results output drawer :session empirical :exports none :tangle ./Stylized_Facts.py :eval never-export :python /usr/bin/python3
@@ -244,10 +299,6 @@ plt.close()
 salvar_grafico(file_name="FDICIA")
 #+end_src
 
-#+RESULTS:
-:results:
-:end:
-
 ** Volatilidade e participação
 
 #+begin_src python :results graphics file :file ./figs/subplots.png
@@ -471,7 +522,7 @@ salvar_grafico(file_name="Distribuicao_Passivos")
 
 ** Crisis centered plot
 *** Begin
-#+begin_src R :session *centered* :results graphics file :file ./figs/Centered_Begin_pct1.png
+#+begin_src R :session *centered* :results graphics file :file ./figs/Centered_Begin_pct1.png :eval never-export :exports none
 library(tidyverse)
 library(purrr)
 library(fredr)
@@ -540,7 +591,7 @@ ggsave(
 
 
 *** End
-#+begin_src R :session *centered* :results graphics file :file ./figs/Centered_End_pct1.png
+#+begin_src R :session *centered* :results graphics file :file ./figs/Centered_End_pct1.png :eval never-export :exports none
 
 end <- c('1954-06-01', '1958-05-01', '1961-03-01', '1970-12-01', '1975-04-01', '1980-08-01', '1982-12-01', '1991-04-01', '2001-12-01', '2009-07-01')
 
@@ -591,109 +642,146 @@ ggsave(
 )
 #+end_src
 
-#+RESULTS:
-[[file:./figs/Centered_End_pct1.png]]
+** Ciclo e tendência
 
+#+BEGIN_SRC python
+import pandas as pd
+import matplotlib.pyplot as plt
+import seaborn as sns
+import pandas_datareader.data as web
+from datetime import datetime as dt
+import statsmodels.api as sm
 
-*  Housing Dynamics and Business Cycle in the US Economy :ignore:
+start = dt(1979, 1, 1)
+end = dt(2020, 12, 31)
 
-After the Great Recession, the literature has analyzed the relevance of housing at macroeconomic level cites:leamer_housing_2015,teixeira_crescimento_2015,fiebiger_semi-autonomous_2018.
-Despite some authors had highlighted the empirical importance of this expenditure in determining economic cycles since the post-war period cites:grebler_capital_1956,green_follow_1997,leamer_housing_2007, only a few macroeconomists have given due attention to this regularity.
-textcite:duesenberry_investment_1958 was an exception and reported the relevance of residential investment and real estate inflation in
-determining the economic cycle long before the Great Recession.
-textcite:keynes_collected_1978 is another example and --- despite dedicating himself to the firms' investment --- wrote to President Roosevelt about the relevance of real estate for economic recovery in the context of the Great Depression:
+df = web.DataReader(["GDPC1", "PRFI"], "fred", start, end)
 
-#+begin_quote
-    ``[...] Housing is by far the best aid to recovery because of the large and continuing scale
-of potential demand; because of the wide geographical distribution of this demand; and
-because the sources of its finance are largely independent of the stock exchanges. I should
-advise putting most of your eggs in this basket, caring about this more than about anything,
-and making absolutely sure that they are being hatched without delay. In this country we
-partly depended for many years on direct subsidies. There are few more proper objects for
-such than working-class houses. If a direct subsidy is required to get a move on (we gave
-our subsidies through the local authorities), it should be given without delay or hesitation.''
-\cite[p.~436]{keynes_collected_1978}
-#+end_quote
+df.columns = [
+    "GDP",
+    "Residential Investment",
+]
+df.index.name = ""
+df = df.pct_change().dropna()
 
-As the above excerpt suggests, the relevance of housing is not restricted to the Great Recession nor the USA case.
-Moreover, however small its share on GDP is (see Figure ref:fig:vol_share A), it does not imply that it has negligible effects on the business cycle or low volatility (see Figure ref:fig:vol_share B).
+cycle, trend = sm.tsa.filters.hpfilter(df["GDP"], 1600)
+_cycle, _trend = sm.tsa.filters.hpfilter(df["Residential Investment"], 1600)
 
-#+begin_export latex
-\begin{figure}[H]
-    \centering
-	\caption{Housing's Particular Stylized Facts}
-	\label{fig:vol_share}
-\begin{figure}[htb]
-    \includegraphics[width = \textwidth]{./figs/Volatility_share.png}
-    \end{figure}
-	\caption*{\textbf{Source:} U.S. Bureau of Economic Analysis, Authors' Elaboration}
-\end{figure}
-#+end_export
+trend.plot(
+    color="red",
+    ls="-",
+    label="GDP trend - HP Filter ($\lambda = 1600$)",
+    legend=True,
+    ax=ax,
+)
+_trend.plot(
+    color="black",
+    ls="-",
+    label="Residential Investment trend - HP Filter ($\lambda = 1600$)",
+    legend=True,
+    ax=ax,
+)
+df = pd.concat([trend, _trend], axis=1)
+df.columns = [
+    "GDP",
+    "Residential Investment",
+]
 
+fig, ax = plt.subplots(1, 1, figsize=(8, 5))
 
+df.plot(ax=ax)
+crise_subprime(ax)
+crises(ax)
 
-In order to depict the relation between housing and business cycle, we present Figure ref:FigIh_u  in which each cycle is represented in a different panel[fn::This similar reasoning can be found in textcites:fiebiger_trend_2017. Unlike them, we plot only residential investment without including other households expenses financed by credit.]. 
-The vertical axis represents residential investment-GDP ratio and the horizontal
-axis represents the rate of capacity utilization as a proxy for business cycle.
-Economic recovery is generally characterized residential investment growing faster than GDP --- with the 1991-2000 period being a particular case. 
-As a consequence of this higher growth rate, is the increase of both residential investment share on GDP and capacity utilization. 
-Following the Sraffian supermultiplier growth model, we conclude that increase of non-residential investment is the result of capital stock adjustment principle.
-This increase implies GDP to grow faster than residential investment, therefore reducing both its share on GDP and capacity utilization ratio. 
-Finally, as a result of economic burst, capacity utilization ratio falls and the cycle.
-
-#+begin_export latex
-\begin{figure}[H]
-	\centering
-	\caption{Residential investment share on GDP VS. capacity utilization during recessions}
-	\label{FigIh_u}
-	\includegraphics[width=\textwidth]{./figs/Ciclo_Ih_u.png}
-	\caption*{\textbf{Source:} Authors' Elaboration}
-\end{figure}
-#+end_export
-
-We also report an indirect relation between housing and aggregate demand. 
-Real estate constitutes a significant portion of household wealth so houses serves as collateral to borrowing cite:teixeira_uma_2011. 
-As a consequence of US institutional arrangement, households --- especially the poorest ones --- could increase their indebtedness as houses prices went up (see Figure ref:FigDividaPreco) as a way to ``make'' capital gains without 
-selling their homes during house bubble of the 2000s cite:teixeira_crescimento_2015.
-Therefore, real estate inflation and durable goods consumption are connected and has relevant consequences for business cycle.
-textcites:zezza_u.s._2008,barba_rising_2009, for example, report that credit-financed consumption was one of the main drivers of economic growth before the Great Recession.
-
-
-In this paper, we argue that this relation between households indebtedness and real estate inflation has other relevant implications.
-The first one is the increasing gap between assets and liabilities in the course of the Great Recession.
-This dynamic is due both to the housing prices burst (post-2005) and to the insensitivity of households' financial commitments.
-In other words, real estate (assets) has a market value while debt (liabilities) has a contractual one, thus, households net worth decreases onset of the subprime crisis.
-Therefore, the second implication is the sharp reduction in the net worth of the poorest households in absolute and relative terms (see Figure ref:FigDistPassivos).
-
-#+begin_export latex
-\begin{figure}[H]
-	\centering
-	\caption{Household indebtedness and house prices dynamics (jan/2000=100)}
-	\label{FigDividaPreco}
-	\includegraphics[width=\textwidth]{./figs/Divida_PrecoImoveis.png}
-	\caption*{\textbf{Source:} U.S. Bureau of Economic Analysis, Authors' Elaboration}
-\end{figure}
-
-\begin{figure}[H]
-	\centering
-	\caption{Liabilities evolution by wealth percentile (1989/07=1)}
-	\label{FigDistPassivos}
-	\includegraphics[width=.8\textwidth]{./figs/Distribuicao_Passivos.png}
-	\caption*{\textbf{Source:} \textcite{us_census_bureau_characteristics_2017}, Authors' Elaboration}
-\end{figure}
-#+end_export
-
-
-
-Before we move forward, it is worth mentioning that the relevance of housing is not restricted to its growth effects. 
-For example, textcite:jorda_great_2016 report that credit and financial sector growth has been led mainly by mortgages. 
-As a consequence, banking activities were redirected towards granting credit majorly to households and not towards productive investment cites:erturk_banks_2007,kohl_more_2018.
-Other studies have shown that real estate inflation is the main determinant of household indebtedness, distribution of wealth and that it has implications for macroeconomic stability cites:ryoo_household_2015,stockhammer_debt-driven_2016,barnes_private_2016,johnston_global_2017,mian_household_2017,anderson_politics_2020,fuller_housing_2020. 
-In summary, what we intended to show is that one cannot analyze the US business cycle without considering housing dynamics.
-On the following section, we analyze how econometric literature has dealt with this topic.
+ax.legend(fontsize=14)
+sns.despine()
+plt.xlabel("")
+salvar_grafico(file_name="Trend")
+plt.close()
+#+END_SRC
 
 * Residuals :noexport:
 
 #+begin_comment
 It is worth mentioning the novelty of \textcite{green_follow_1997} and \textcite{leamer_housing_2007} --- revisited in \textcite{leamer_housing_2015} and by \textcite{fiebiger_trend_2017} --- when shedding light on the relevance of residential investment even before of the Great Recession. CITAÇÃO KEYNES DO PROJETO + DUESEMBERRY
 #+end_comment
+*  Housing Dynamics and Business Cycle in the US Economy :ignore:
+Traditionally, economists do not pay attention to the role of residential investment to macroeconomic dynamics.
+There are, nevertheless, two notable exceptions.
+In a letter to President Roosevelt, in the mid of the Great Depression, Keynes present the case of housing as the best aid to fight the crisis and to foster economic recovery \cite[p.~436]{keynes_collected_1978}.
+The other exception is textcite:duesenberry_investment_1958 who presents a critique of ordinary theories of aggregate investment because they put together firms’ investment in capital and structures and investment in residential housing.
+In this sense, he builds a model dedicated for the latter type of investment, emphasizing the role of house prices.
+
+Perhaps, this lack of attention could be attributed to residential investment small share of aggregate demand (see figure ref:fig:share).
+The subprime crisis and the Great Recession of the US economy had changed the landscape, making clear the macroeconomic role of
+housing prices and finance, and residential investment.
+Specifically, we argue however small its share on GDP is, it does have a fundamental role in explaining business cycles and long-run growth.
+
+
+#+begin_export latex
+\begin{figure}[H]
+    \centering
+	\caption{Expenditures share on GDP}
+	\label{fig:share}
+\begin{figure}[htb]
+    \includegraphics[width = \textwidth]{./figs/Share_AD.png}
+    \end{figure}
+	\caption*{\textbf{Source:} U.S. Bureau of Economic Analysis, Authors' Elaboration}
+\end{figure}
+#+end_export
+
+An aspect that macroeconomists are paying attention is the role of residential investment to business cycles.
+Even before the Great Recession, textcite:green_follow_1997 analyses the relation between residential investment, non-residential investment and GDP for the US from 1952 to 1992.
+His conclusion is that residential investment leads the cycle, while non-residential investment (i.e., firms business investment) lags the cycle.
+However he argues it does not imply a causal relationship.
+He restricts its relevance as temporal precedence indicator.
+This result would be due to forward-looking behavior of households.
+
+textcite:leamer_housing_2007 is more incisive. He states that housing is the business cycle.
+In analyzing the US economy for the post-war period, he concludes that residential investment is the best predictor of economic crises.
+The economic cycle of US economy would be a consumer cycle: "first homes, then cars, last business investment" \cite[p.~8]{leamer_housing_2007}.
+textcite:kydland_2016_housing extends \citeauthor*{leamer_housing_2007}'s \citeyear{leamer_housing_2007} proposition to other countries to evaluate how unique the US case is.
+Based on a neoclassical business cycle framework, they conclude that long-term nominal mortgage rate is a relevant transmission channel from interest rates to housing costs.
+More recently, textcite:huang_is_2018 assess both \citeauthor*{leamer_housing_2007}'s \citeyear{leamer_housing_2007} hypotheses related to residential investment (prediction and causality) for 17 countries.
+For the US, both statements are valid[fn::For the other countries, they found inconclusive results regarding fluctuations due to institutional heterogeneity. However, textcite:huang_is_2018 claim that for most G7 countries, residential investment at least amplify the business cycle.] and housing related variables (house prices, real mortgage rate --- deflated by a consumer price index --- and bank spread) lead the business cycle.
+
+
+In order to depict the relation between residential investment and business cycle, we present Figure ref:fig:cycle.
+In each panel, we present the growth rate of selected expenditures 2 years before and after recession begin[fn::This similar reasoning can be found in textcite:leamer_housing_2007.].
+In most of them, residential investment growth rate is negative before the recession start.
+The Great Recession presents is a remarkable example of this pattern while dot-com crisis is an exception.
+
+
+#+begin_export latex
+\begin{figure}[H]
+	\centering
+	\caption{Selected expecditure growth rates 2 years before and after recession start}
+	\label{fig:cycle}
+	\includegraphics[width=\textwidth]{./figs/Centered_Begin_pct1.png}
+	\caption*{\textbf{Source:} Authors' Elaboration}
+\end{figure}
+#+end_export
+
+In a heterodox perspective, textcites:fiebiger_semi-autonomous_2018,fiebiger_trend_2017 present residential investment as a Luxemburg-type of external market providing a source of autonomous demand to absorb economic surplus.
+Both works state its role (together with debt-financed consumption) in inducing non-residential investment and driving output growth, during the business cycle as well in the long-run.
+Figure ref:fig:trend presents the trend of GDP and residential investment growth rate by estimating a HP filter.
+In summary, both series share a correlation relation in which residential investment growth rate is more volatile than GDP growth rate.
+Recently, textcite:perez_Montiel_2021 test econometrically the assertion that this kind of expenditure leads not only the businesses cycle but also the long-run economic growth for the US economy. Their research finds evidence of this claim, without finding any relevant feedback from output to residential investment.
+
+#+begin_export latex
+\begin{figure}[H]
+	\centering
+	\caption{GDP and Residential investment growth rate tred (HP filter, $\lambda = 1600$)}
+	\label{fig:trend}
+	\includegraphics[width=\textwidth]{./figs/Trend.png}
+	\caption*{\textbf{Source:} Authors' Elaboration}
+\end{figure}
+#+end_export
+
+
+Before we move forward, it is worth mentioning that the relevance of housing is not restricted to its growth effects. 
+For example, textcite:jorda_great_2016 report that credit and financial sector growth has been led mainly by mortgages. 
+As a consequence, banking activities were redirected towards granting credit majorly to households and not towards productive investment cites:erturk_banks_2007,kohl_more_2018.
+Other studies have shown that real estate inflation is the main determinant of household indebtedness, distribution of wealth and that it has implications for macroeconomic stability cites:ryoo_household_2015,stockhammer_debt-driven_2016,barnes_private_2016,johnston_global_2017,mian_household_2017,anderson_politics_2020,fuller_housing_2020. 
+In summary, what we intended to show was the macroeconomic relevance of residential investment.
+On the following section, we analyze how econometric literature has dealt with determinants of the latter.
