Apanhado da literatura empírica

--- a/Articles/VECM/Empirical_Review.org
+++ b/Articles/VECM/Empirical_Review.org
@@ -1,8 +1,12 @@
+* Review overview :noexport:
+[[file:../../../Org/notes/2021-02-09-11-52-43-mccarthy_2002_Monetary.org][mccarthy_2002_Monetary: Monetary Policy Transmission to Residential Investment ()]]
+
 * Empirical review configs                                           :ignore:noexport:
 
 bibliography:ref.bib
 
 * Review of the Macroeconometric Literature                          :ignore:
+
 
 After the US housing bubble burst, there have been a growing attention in the macroeconomic implications of residential investment.
 It worth noting that most econometric papers that includes residential investment has failed to treat it macroeconomically, restricting it to microeconomic and regional issues cite:arestis_u.s._2008.
@@ -108,4 +112,6 @@ On the following section, we discuss this proposal in further details and evalua
 #+END_EXPORT
 
 
+** Goodhearth and Hoffman
 
+** Arestis and Gonzalez Martinez
