--- a/Writings/QCA/Research_Paper.org
+++ b/Writings/QCA/Research_Paper.org
@@ -35,6 +35,8 @@
 *** Apresentar a revolução em maiores detalhes
 *** Apresentar comparação internacional e elementos institucionais
 *** Revisão da literatura empírica e incapacidade de analisar variáveis qualitativas adequadamente
+*** Revisão de VoC
+**** Divergência na semelhança e Convergência no diferente
 ** Data and Methods
 *** Reagrupar informações institucionais de forma qualitativa
 *** Apresentar origens, aplicações e vantagens do QCA
